; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-diff.c_perf_diff__compute_wdiff.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/extr_builtin-diff.c_perf_diff__compute_wdiff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hist_entry = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i32 }

@compute_wdiff_w2 = common dso_local global i32 0, align 4
@compute_wdiff_w1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @perf_diff__compute_wdiff(%struct.hist_entry* %0) #0 {
  %2 = alloca %struct.hist_entry*, align 8
  %3 = alloca %struct.hist_entry*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.hist_entry* %0, %struct.hist_entry** %2, align 8
  %6 = load %struct.hist_entry*, %struct.hist_entry** %2, align 8
  %7 = call %struct.hist_entry* @hist_entry__next_pair(%struct.hist_entry* %6)
  store %struct.hist_entry* %7, %struct.hist_entry** %3, align 8
  %8 = load %struct.hist_entry*, %struct.hist_entry** %2, align 8
  %9 = getelementptr inbounds %struct.hist_entry, %struct.hist_entry* %8, i32 0, i32 1
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %4, align 4
  %12 = load %struct.hist_entry*, %struct.hist_entry** %3, align 8
  %13 = icmp ne %struct.hist_entry* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load %struct.hist_entry*, %struct.hist_entry** %3, align 8
  %16 = getelementptr inbounds %struct.hist_entry, %struct.hist_entry* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  br label %20

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %19, %14
  %21 = phi i32 [ %18, %14 ], [ 0, %19 ]
  store i32 %21, i32* %5, align 4
  %22 = load %struct.hist_entry*, %struct.hist_entry** %2, align 8
  %23 = getelementptr inbounds %struct.hist_entry, %struct.hist_entry* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store i32 1, i32* %24, align 4
  %25 = load %struct.hist_entry*, %struct.hist_entry** %3, align 8
  %26 = icmp ne %struct.hist_entry* %25, null
  br i1 %26, label %31, label %27

27:                                               ; preds = %20
  %28 = load %struct.hist_entry*, %struct.hist_entry** %2, align 8
  %29 = getelementptr inbounds %struct.hist_entry, %struct.hist_entry* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 1
  store i32 0, i32* %30, align 4
  br label %42

31:                                               ; preds = %20
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @compute_wdiff_w2, align 4
  %34 = mul nsw i32 %32, %33
  %35 = load i32, i32* %5, align 4
  %36 = load i32, i32* @compute_wdiff_w1, align 4
  %37 = mul nsw i32 %35, %36
  %38 = sub nsw i32 %34, %37
  %39 = load %struct.hist_entry*, %struct.hist_entry** %2, align 8
  %40 = getelementptr inbounds %struct.hist_entry, %struct.hist_entry* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 1
  store i32 %38, i32* %41, align 4
  br label %42

42:                                               ; preds = %31, %27
  %43 = load %struct.hist_entry*, %struct.hist_entry** %2, align 8
  %44 = getelementptr inbounds %struct.hist_entry, %struct.hist_entry* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  ret i32 %46
}

declare dso_local %struct.hist_entry* @hist_entry__next_pair(%struct.hist_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
